--- a/SplitSampleFeature01/src/main/res/values-fr/strings.xml
+++ b/SplitSampleFeature01/src/main/res/values-fr/strings.xml
@@ -1,6 +1,4 @@
 <resources>
-    <string name="app_name_ex">BundleToolLanuage_EX_French</string>
-    <string name="apple">apple_French</string>
-    <string name="pig">pig_French</string>
-    <string name="aaa">aaa</string>
+    <string name="app_name_ex">FeatureLanguage_EX_French</string>
+    <string name="apple">pommes</string>
 </resources>
