--- a/SplitSampleFeature01/src/main/res/values/strings.xml
+++ b/SplitSampleFeature01/src/main/res/values/strings.xml
@@ -1,6 +1,4 @@
 <resources>
-    <string name="app_name_ex">BundleToolLanuage_EX</string>
+    <string name="app_name_ex">FeatureLanguage_EX</string>
     <string name="apple">apple</string>
-    <string name="pig">pig</string>
-    <string name="aaa">aaa</string>
 </resources>
